objects/TaskItem__c.object
<CustomObject>
    <fields>
        <fullName>TaskItemType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task Item Type</label>
        <referenceTo>TaskItemType__c</referenceTo>
        <relationshipLabel>Task Items</relationshipLabel>
        <relationshipName>Task_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskItem__c</fullName>
        <inlineHelpText>Campos,Workflows: NombreAPIdelObjeto.NombreDelCampo
Layouts: NombreAPIdelObjeto-Nombre Del Layout
EmailTemp,Dashb.,Documents, Reports unfiled$public/NombreDeLaTemp (o) carpeta/NombreDeLaTemp</inlineHelpText>
        <label>Task Item</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Items</relationshipLabel>
        <relationshipName>Task_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Task Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TI{00000000}</displayFormat>
        <label>Task Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FormatValidation_Dash</fullName>
        <active>true</active>
        <errorConditionFormula>(TaskItemType__r.Name == &apos;Layout&apos; )&amp;&amp;
!CONTAINS(TaskItem__c, &apos;-&apos;)</errorConditionFormula>
        <errorMessage>CustomFields and QuickActions must contain a dot: ObjectName__c.Metadata</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FormatValidation_Dot</fullName>
        <active>true</active>
        <errorConditionFormula>(TaskItemType__r.Name == &apos;CustomField&apos;  || TaskItemType__r.Name == &apos;QuickAction&apos; )&amp;&amp;
!CONTAINS(TaskItem__c, &apos;.&apos;)</errorConditionFormula>
        <errorMessage>CustomFields and QuickActions must contain a dot: ObjectName__c.Metadata</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FormatValidation_Metadata</fullName>
        <active>true</active>
        <errorConditionFormula>(TaskItemType__r.Name == &apos;CustomMetadata&apos;)&amp;&amp;
(!CONTAINS(TaskItem__c, &apos;.&apos;) || CONTAINS(TaskItem__c, &apos;__mdt&apos;))</errorConditionFormula>
        <errorMessage>CustomMetadata must contain a dot and not contain __mdt: ObjectName.Metadata</errorMessage>
    </validationRules>
</CustomObject>